# InheritVault

./: .gitattributes  .gitignore  KEEPER.md  LICENSE  Makefile  README.md  SCF-PROPOSAL.md
.github/workflows/: ci.yml
contracts/inherit-vault/: Cargo.toml
contracts/inherit-vault/src/: lib.rs  test.rs
docs/: testnet-demo.md
web/: app.html  index.html
