[package]
name = "inherit-vault"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "InheritVault — a non-custodial on-chain inheritance vault (dead-man's switch) for Stellar/Soroban"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
